--- a/index.html
+++ b/index.html
@@ -92,7 +92,13 @@
                   </span>
                 </a>
               </li>
-              
+              <li>
+                <a href="game.html">
+                  <i class="fa fa-gamepad" aria-hidden="true"></i> <span>Game</span>
+                  <span class="pull-right-container">
+                  </span>
+                </a>
+              </li>
               
             </ul>
           </section>
